--- a/styles/styles.css
+++ b/styles/styles.css
@@ -160,14 +160,14 @@ body {
 .options-container {
     display: flex;
     flex-direction: column; /* Размещаем ответы вертикально */
-    gap: 10px; /* Добавляем равномерное расстояние между ответами */
+    margin: 13px; /* Добавляем равномерное расстояние между ответами */
 }
 
 /* Стиль для каждого варианта ответа */
 .options-container label {
     display: flex;
     align-items: center;
-    padding: 8px 12px; /* Пространство внутри ответа */
+    padding: 10px 12px; /* Пространство внутри ответа */
     border-radius: 5px;
     background: rgba(255, 255, 255, 0.1); /* Легкий фон для каждого ответа */
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2); /* Внутренняя тень для красоты */
@@ -218,3 +218,5 @@ body {
     height: 20px;
     border: 2px solid #ffffff;
 }
+
+
