--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,6 +128,8 @@ body {
     margin: 0;
 }
 
+
+
 /* Логотип universities */
 .site-header {
     width: 100%;
@@ -217,6 +219,50 @@ body {
     width: 20px; /* Размер кнопки */
     height: 20px;
     border: 2px solid #ffffff;
+}
+
+/* Стили для футера */
+.site-footer {
+    position: fixed; /* Фиксируем положение */
+    bottom: 0; /* Прикрепляем к нижней части экрана */
+    left: 0;
+    right: 0; /* Занимает всю ширину экрана */
+    text-align: center; /* Выравнивание текста по центру */
+    background-color: #284d51; /* Цвет фона */
+    color: #fff; /* Цвет текста */
+    padding: 10px 0; /* Отступы сверху и снизу */
+    z-index: 1000; /* Убедитесь, что подпись видна поверх других элементов */
+}
+
+/* Дополнительные стили для текста */
+.copyright-text {
+    margin: 0; /* Убираем стандартный отступ */
+    font-size: 14px; /* Размер шрифта */
+}
+
+/* Контейнер для изображения и текста */
+.mark-container {
+    position: fixed; /* Фиксированное положение */
+    top: 10px; /* Отступ сверху */
+    left: 10px; /* Отступ слева */
+    display: flex; /* Для выравнивания элементов */
+    align-items: center; /* Выравнивание по центру вертикально */
+    z-index: 1000; /* Убедитесь, что элемент виден поверх других */
+}
+
+/* Стили для изображения */
+.mark-image {
+    width: 300px; /* Ширина изображения */
+    height: auto; /* Сохранение пропорций */
+    margin-right: 5px; /* Отступ между изображением и текстом */
+}
+
+/* Стили для текста */
+.mark-text {
+    font-family: Arial, sans-serif; /* Шрифт */
+    font-size: 16px; /* Размер шрифта */
+    color: #333; /* Цвет текста */
+    font-weight: bold; /* Жирный шрифт */
 }
 
 
